tests/paczka2/big_fuzzy/97836194.err
Error in line 17: QxcZA A6:7 40,5
Error in line 16: QxcZA A627 17,0
Error in line 18: DSKGTlAOhp A770 34,8
Error in line 27: QxcZA A694 95,1
Error in line 2: A770 S826 49,7
Error in line 24: Tk5 A627 97,5
Error in line 34: Tk5 S826 28,9
Error in line 48: aP3dkM7TvGp A694 82,4
Error in line 77: Tk5 S826 89,0
Error in line 90: QxcZA S826 34,7
Error in line 88: A770 A627 77,2
Error in line 96: DSKGTlAOhp A770 52,9
Error in line 107: DSKGTlAOhp A770 73,5
Error in line 110: DSKGTlAOhp A627 79,0
Error in line 108: A770 A770 15,0
Error in line 116: Tk5 A627 11,5
Error in line 120: aP3dkM7TvGp S826 63,3
Error in line 119: Tk5 A694 10,1
Error in line 118: A770 A694 47,4
Error in line 122: aP3dkM7TvGp A694 12,5
Error in line 129: aP3dkM7TvGp A627 47,4
Error in line 131: aP3dkM7TvGp A770 44,8
Error in line 124: Tk5 A627 50,7
Error in line 141: Tk5 S826 755,8
Error in line 138: A770 A627 92,6
Error in line 151: BTfHQTNG A770 205,0
Error in line 153: A770 A770 2,4
Error in line 159: QxcZA A627 51,4
Error in line 155: aP3dkM7TvGp S826 181,2
Error in line 162: Tk5 S826 106,7
Error in line 185: QxcZA S826 31,4
Error in line 187: Tk5 A627 40,7
Error in line 196: Tk5 A770 58,4
Error in line 205: A770 A627 77,70
Error in line 193: wK7 A770 19,2
Error in line 208: A770 A694 45,0
Error in line 204: aP3dkM7TvGp A627 46,6
Error in line 214: aP3dkM7TvGp S826 187,83
Error in line 209: A770 S826 68,4
Error in line 212: QxcZA A770 20,6
Error in line 228: QxcZA S826 68,8
Error in line 229: QxcZA A627 90,4
Error in line 236: BTfHQTNG A694 78,1
Error in line 241: QxcZA A694 22,Á
Error in line 235: QxcZA A694 54,3
Error in line 223: Tk5 A627 8,4
Error in line 246: DSKGTlAOhp AC94 4,9
